// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe It's a normal iframe if loading === "eager" 1`] = `
<iframe
  className="frontity-lazy-iframe fake-class-name"
  loading="eager"
  src="https://fake-src.com"
  title="Some fake title"
/>
`;

exports[`Iframe works on server (with height) 1`] = `
Array [
  <noscript>
    <iframe
      className="frontity-lazy-iframe fake-class-name"
      height={300}
      loading="lazy"
      src="https://fake-src.com"
      title="Some fake alt text"
    />
  </noscript>,
  <iframe
    className="frontity-lazy-iframe fake-class-name"
    data-src="https://fake-src.com"
    height={300}
    loading="lazy"
    style={
      Object {
        "visibility": "hidden",
      }
    }
    title="Some fake alt text"
  />,
]
`;

exports[`Iframe works on server (with height) 2`] = `
"<script data-rh=\\"true\\" id=\\"frontity-no-proxy-iframe\\" type=\\"text/javascript\\">
  if (typeof window !== \\"undefined\\" && (!(\\"Proxy\\" in window) || !(\\"IntersectionObserver\\" in window))) {
    document.addEventListener(\\"DOMContentLoaded\\", function() {
      var iframes = document.querySelectorAll(\\"iframe.frontity-lazy-iframe\\");
      for (i = 0; i < iframes.length; ++i) {
        var iframe = iframes[i];
        iframe.setAttribute(\\"src\\", iframe.getAttribute(\\"data-src\\"));
        iframe.removeAttribute(\\"data-src\\");
        iframe.removeAttribute(\\"style\\");
      }
    });
  }
</script>"
`;

exports[`Iframe works on server (with height) 3`] = `
"<noscript data-rh=\\"true\\" ><style id=\\"frontity-no-js-iframes\\" type=\\"text/css\\">
  :non(noscript) > .frontity-lazy-iframe {
    display: none;
  }
</style></noscript>"
`;

exports[`Iframe works on server (without height) 1`] = `
Array [
  <noscript>
    <iframe
      className="frontity-lazy-iframe fake-class-name"
      loading="lazy"
      src="https://frontity.com"
      title="Some fake title"
    />
  </noscript>,
  <iframe
    className="frontity-lazy-iframe fake-class-name"
    data-src="https://frontity.com"
    loading="lazy"
    style={
      Object {
        "visibility": "hidden",
      }
    }
    title="Some fake title"
  />,
]
`;

exports[`Iframe works on server (without height) 2`] = `
"<script data-rh=\\"true\\" id=\\"frontity-no-proxy-iframe\\" type=\\"text/javascript\\">
  if (typeof window !== \\"undefined\\" && (!(\\"Proxy\\" in window) || !(\\"IntersectionObserver\\" in window))) {
    document.addEventListener(\\"DOMContentLoaded\\", function() {
      var iframes = document.querySelectorAll(\\"iframe.frontity-lazy-iframe\\");
      for (i = 0; i < iframes.length; ++i) {
        var iframe = iframes[i];
        iframe.setAttribute(\\"src\\", iframe.getAttribute(\\"data-src\\"));
        iframe.removeAttribute(\\"data-src\\");
        iframe.removeAttribute(\\"style\\");
      }
    });
  }
</script>"
`;

exports[`Iframe works on server (without height) 3`] = `
"<noscript data-rh=\\"true\\" ><style id=\\"frontity-no-js-iframes\\" type=\\"text/css\\">
  :non(noscript) > .frontity-lazy-iframe {
    display: none;
  }
</style></noscript>"
`;
